# FZChess

./: .gitignore  CMakeLists.txt  FZChessPlus.cc  README.md  bratko-kopec.txt  build_android.sh  chess_test.txt  perft.txt
src/: CMakeLists.txt  Chess.cc  Chess.cpp  Chess.h  Eval.cc  Eval.cpp  Eval.h  Evaulate.h  Hash.cc  Hash.cpp  Hash.h  Move.h  Table.cc  Table.cpp  Table.h  UCI.cc  UCI.h  Uci.cpp  Uci.h  Util.cc  Util.cpp  Util.h  fzchess.c  main.cc  main.cpp  tags  utils.c  utils.h
